# sunifdef

./: .editorconfig  .gitattributes  .gitignore  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
man/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  args.c  categorical.c  categorical.h  chew.c  evaluator.c  evaluator.h  fs_nix.c  line_despatch.c  line_despatch.h  report.c  symbol_table.h
test_sunifdef/: Makefile.in
test_sunifdef/test_cases/: test0206.c  test0206.c.expect  test0207.c  test0207.c.expect  test0208.c  test0208.c.expect  test0209.c  test0210.c  test0211.c.expect  test0212.c  test0212.c.expect  test0213.c  test0213.c.expect  test0214.c  test0214.c.expect  test0215.c  test0215.c.expect  test0216.c  test0216.c.expect  test0217.c  test0217.c.expect
