AC_INIT([sunifdef], [4.0.0])
AC_CONFIG_SRCDIR([configure.ac])

AC_CONFIG_MACRO_DIRS([m4])

AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign serial-tests])
AC_CHECK_HEADERS(stdbool.h)

AC_LANG([C])
AC_PROG_CC
LT_INIT

AC_CONFIG_FILES([Makefile src/Makefile man/Makefile test_sunifdef/Makefile])
AC_OUTPUT
